--- a/css/todo.css
+++ b/css/todo.css
@@ -237,6 +237,7 @@ body {
     border:none;
     outline-color:#f4f4f4;
     background-color:#f4f4f4;
+    margin-top: 0.5rem;
 }
 
 .left-column #plus-icon input:hover {
@@ -277,6 +278,7 @@ body {
     left: 2%;
     height: 54%;
     color: #4269e4;
+    display: flex;
 }
 
 .middle-column .task-bar-container .sort-button {
@@ -307,9 +309,9 @@ body {
 }
 
 .middle-column .task-bar-container .fa-ellipsis-h {
-    color:black;
+    color: black;
     font-size: 69%;
-
+    padding: 0.8rem 1rem 0 1rem;
 }
 
 .middle-column .task-bar-container .sort-button .fa-exchange-alt {
@@ -343,7 +345,7 @@ body {
 .middle-column .add-task-list #add-task #plus {
     font-size: 30px;
     color: #4174e8;
-    padding-left: 2%;
+    padding-left: 0.2%;
 }
 
 .middle-column .add-task-list #add-task #plus:hover {
@@ -359,11 +361,11 @@ body {
     line-height: 56px;
     border: none;
     border-bottom: 1px solid #eaeaea;
+    display: flex;
+    font-size: 0.8rem;
+    align-items: center;
     width: 96%;
-    padding-left: 4.5%;
-    display:flex;
-    font-size:0.8rem;
-    align-items:center;
+    margin-left: 1%;
 }
 
 .new-task .fa-circle {
@@ -402,6 +404,40 @@ body {
     border: 1px solid #eaeaea;
     align-items: center;
     border-bottom: none;
+    opacity:0.8;
+}
+
+.right-column .sub-task-info #sub-task #strike {
+    padding-left: 1rem;
+    color: #3e69e4;
+    width: 1rem;
+    height: 2rem;
+    margin-top: 0.9rem;
+    background-image:url("verified.svg");
+}
+
+.strike {
+    color: #3e69e4;
+    width: 1rem;
+    height: 1.2rem;
+    font-size: 1.2rem;
+    position: relative;
+    margin-left: 0.9rem;
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-image:url("verified.svg");
+}
+
+.strike-image {
+    color: #3e69e4;
+    width: 1rem;
+    height: 1.2rem;
+    font-size: 1.2rem;
+    position: relative;
+    margin-left: 0.9rem;
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-image:url("check.svg");
 }
 
 .right-column .sub-task-info #sub-task input {
@@ -409,11 +445,13 @@ body {
 }
 
 .right-column .sub-task-info #sub-task #sub-task-name {
-    width: 73%;
-    height: 69%;
-    padding: 0 0.8rem 0 1.1rem;
+    width: 69%;
+    height: 60%;
+    margin: 0 0.5rem 0 0.7rem;
     align-items: center;
     display: flex;
+    outline-color: black;
+    padding-left: 0.8rem;
 }
 
 .right-column .sub-task-info #add-steps {
@@ -428,7 +466,7 @@ body {
 .right-column .sub-task-info #add-steps #add-steps-symbol {
     font-size: 30px;
     color: #4174e8;
-    padding-left: 1rem;
+    padding-left: 0.85rem;
 }
 
 .right-column .sub-task-info #add-steps input {
@@ -546,5 +584,4 @@ body {
     height: 7%;
     display: flex;
     align-items: center;
-    padding-left: 1.2rem;
 }
