--- a/css/todo.css
+++ b/css/todo.css
@@ -322,6 +322,16 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url("../images/plus-symbol.svg");
+} 
+
+.left-column #plus-icon #group-symbol{
+    position: relative;
+    width: 1.5rem;
+    height: 1.5rem;
+    left: 2.8rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../images/list-file.svg");
 }
 
 .left-column #plus-icon #plus-symbol:hover {
@@ -488,6 +498,7 @@ body {
 }
 
 .new-task {
+    cursor:pointer;
     height: 8%;
     line-height: 56px;
     border: none;
@@ -548,7 +559,6 @@ body {
     color: #3e69e4;
     width: 1.2rem;
     height: 1.2rem;
-    font-size: 1.2rem;
     position: relative;
     margin-left: 1rem;
     background-size: contain;
@@ -559,9 +569,8 @@ body {
 .strike-image {
     cursor:pointer;
     color: #3e69e4;
-    width: 1rem;
-    height: 1.2rem;
-    font-size: 1.2rem;
+    width: 1.3rem;
+    height: 1.3rem;
     position: relative;
     margin-left: 0.9rem;
     background-size:contain;
@@ -744,7 +753,7 @@ body {
     cursor: pointer;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url(../images/close-pane.svg);
+    background-image: url("../images/close-pane.svg");
 }
 
 .right-column .taskCloseInfo #date {
@@ -760,11 +769,33 @@ body {
     cursor: pointer;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url(../images/trash.svg);
+    background-image: url("../images/trash.svg");
+}
+
+ #list-icon {
+    position: relative;
+    width: 1rem;
+    height: 1rem;
+    left: -0.2rem;
+    top: -0.2rem;
+    opacity:0.9;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../images/list.svg");
 }
 
 .new-step {
+    cursor:pointer;
     height: 7%;
     display: flex;
     align-items: center;
+}
+
+.new-list {
+    display : flex;
+    color : #3d71e4;
+    height : 37px;
+    padding-left : 17px;
+    cursor : pointer;
+    align-items : center;
 }
