create and delete added

--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,9 +1,9 @@
 <div class = "container">
     <app-header></app-header>
     <div class = "content-info">
-      <app-left-side></app-left-side>
-      <app-middle-content></app-middle-content>
-      <app-right-side></app-right-side>
+      <app-left-side [middleContent] = "middleContent" [rightSide] = "rightSide"></app-left-side>
+      <app-middle-content #middleContent [rightSide] = "rightSide"></app-middle-content>
+      <app-right-side #rightSide [middleContent] = "middleContent"></app-right-side>
     </div>
 </div>
   
