--- a/src/app/right-side/right-side.component.html
+++ b/src/app/right-side/right-side.component.html
@@ -1,15 +1,20 @@
-<div class = "right-column" id = "right-column">
+<div class = "right-column" id = "right-column" [ngClass] = "(isToggled && currentSubTask.status)? 'right-column display-right-col-style':'right-column'">
     <div class = "sub-task-info">
         <div id = "sub-task">
-            <span id = "strike"></span>
-            <div id = "sub-task-name"></div>
+            <span class = "strike" [class.strike-image] = "currentSubTask.isStriked" (click) = "strikeSubTask()"></span>
+            <div id = "sub-task-name" [class.strike-text] = "currentSubTask.isStriked">{{currentSubTask.subTaskName}}</div>
             <span id = "star-symbol"></span>
         </div>
-        <div id = "steps-list">
+        <div id = "steps-list" *ngFor="let step of currentSubTask.steps">
+            <div class = "new-step" *ngIf="step.status">
+                <span class = "strike" [class.strike-image] = "step.isStriked" (click)="strikeStep(step)"></span>
+                <span class = "taskSpan-style" [ngClass]="step.isStriked ? 'taskspan-style strike-text' : 'taskspan-style'">{{step.stepName}}</span>
+                <span class = "delete-button" (click) = "deleteStep(step)">x</span>
+            </div>
         </div>
         <div id = "add-steps">
             <span id = "add-steps-symbol"></span>
-            <input type = "text" id = "new-step" placeholder = "Add steps"/>
+            <input type = "text" #newStep id = "new-step" placeholder = "Add steps" (keyup.enter) = "addStep(newStep)"/>
         </div>
         <div id = "add-to-my-day">
             &#9728;
@@ -36,8 +41,8 @@
         </div>
     </div>
     <div class = "taskCloseInfo">
-        <span id = "close-button"></span>
+        <span id = "close-button" (click) = 'closeSubTaskInfo()'></span>
         <span id ="date"></span>
-        <span id = "delete-sub-task"></span>
+        <span id = "delete-sub-task" (click) = 'deleteSubTask()'></span>
     </div>
 </div>
