--- a/src/app/right-side/right-side.component.scss
+++ b/src/app/right-side/right-side.component.scss
@@ -2,8 +2,8 @@
 
 .right-column {
     background-color: #f5f5f5;
-    /* display: none; */
-    width: 22.3rem;
+    display: none;
+    width: 20.3rem;
     overflow: auto;
     overflow-x: hidden;
 }
@@ -21,14 +21,6 @@
     align-items: center;
     border-bottom: none;
     opacity:0.8;
-}
-
-.right-column .sub-task-info #sub-task #strike {
-    cursor:pointer;
-    margin-left: 0.8rem;
-    width: 1.3rem;
-    height: 2rem;
-    margin-top: 0.9rem;
 }
 
 .strike {
@@ -215,14 +207,14 @@
 
 .right-column .taskCloseInfo {
     display: flex;
-    width: 37rem;
+    width: 20.3rem;
     background-color: white;
     height: 2rem;
     border-top: 1px solid #eaeaea;
 }
 
 .right-column .taskCloseInfo #close-button {
-    width: 1.5rem;
+    width: 4.5rem;
     position: relative;
     height: 1.3rem;
     top: 0.5rem;
@@ -239,10 +231,11 @@
 }
 
 .right-column .taskCloseInfo #delete-sub-task {
-    width: 25rem;
+    width: 30rem;
     position: relative;
     height: 1rem;
     top: 0.7rem;
+    left: 7rem;
     cursor: pointer;
     background-size: contain;
     background-repeat: no-repeat;
@@ -259,4 +252,44 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url("/assets/images/list.svg");
+}
+
+.display-right-col-style {
+    display:block;
+    transition:0.3s;
+}
+
+.list-icon {
+   position: relative;
+   width: 1rem;
+   height: 1rem;
+   left: -0.2rem;
+   top: -0.2rem;
+   opacity:0.9;
+   background-size: contain;
+   background-repeat: no-repeat;
+   background-image: url("/assets/images/list.svg");
+}
+
+.new-step {
+   cursor:pointer;
+   height: 7%;
+   display: flex;
+   align-items: center;
+}
+
+.taskspan-style {
+    padding-left: 8%;
+    width: 4rem;
+}
+
+.strike-text {
+    text-decoration: line-through;
+}
+
+.delete-button {
+    position: relative;
+    left: 9.75rem;
+    opacity: 0.7;
+    width: 1rem;
 }
