--- a/src/app/left-side/left-side.component.scss
+++ b/src/app/left-side/left-side.component.scss
@@ -196,6 +196,12 @@
    align-items : center;
 }
 
+.task-count{
+    width: 1rem;
+    height: 1rem;
+    color: #292b35;
+}
+
 .task-name {
     padding-left: 1rem;
     padding-bottom: 0.5rem;
@@ -225,7 +231,7 @@
     width: 1.5rem;
     height: 1rem;
     left: -0.2rem;
-    top: -0.2rem;
+    top: 0.1rem;
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url("/assets/images/plus-symbol.svg");
@@ -263,6 +269,9 @@
 
 .left-column #plus-icon .menu-name {
     line-height: 32px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 13rem
 }
 
 .menu-name {
@@ -271,6 +280,9 @@
     display: block;
     color: #292b35;
     font-size: 0.8rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 13rem;
 }
 
 .display-menu {
