--- a/src/app/right-side/right-side.component.scss
+++ b/src/app/right-side/right-side.component.scss
@@ -26,8 +26,8 @@
 .strike {
     cursor: pointer;
     color: #3e69e4;
-    width: 1.5rem;
-    height: 1.3rem;
+    width: 1.3rem;
+    height: 1.1rem;
     position: relative;
     margin-left: 0.8rem;
     background-size: contain;
@@ -38,8 +38,8 @@
 .strike-image {
     cursor: pointer;
     color: #3e69e4;
-    width: 1.5rem;
-    height: 1.3rem;
+    width: 1.3rem;
+    height: 1.1rem;
     position: relative;
     margin-left: 0.8rem;
     background-size:contain;
@@ -280,7 +280,9 @@
 
 .taskspan-style {
     padding-left: 8%;
-    width: 4rem;
+    width: 13.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .strike-text {
@@ -289,7 +291,7 @@
 
 .delete-button {
     position: relative;
-    left: 9.75rem;
+    left: 0.15rem;
     opacity: 0.7;
     width: 1rem;
 }
