added update and some css

--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -46,7 +46,7 @@
         </li>
         <div id ="created-list">
             <div *ngFor="let item of tasks">
-                <div class = "new-list" (click) = "displayTaskInfo(item)">
+                <div *ngIf="'Task' !== item.taskName" class = "new-list" (click) = "displayTaskInfo(item)">
                     <span class = "list-icon"></span>
                     <span *ngIf = "isToggled" class = "menu-name">{{item.taskName}}</span>
                     <span *ngIf = "isToggled" class = "task-count">{{getTaskCount(item)}}</span>
@@ -56,7 +56,7 @@
     </ul>
     <div id = "plus-icon">
         <span id = "plus-symbol" (click) = "toggleLeftDivByPlus()"></span>
-        <input #newList *ngIf = "isToggled" type = "text" id = "new-list" placeholder = "New list" class = "menu-name" (keyup.enter) = "addTask(newList)"/>
+        <input #newList *ngIf = "isToggled" type = "text" id = "new-list" placeholder = "New list" class = "menu-name" (keyup.enter) = "addTask(newList)" maxlength="255"/>
         <span *ngIf = "isToggled" id = "group-symbol"></span> 
     </div>
 </div>
