--- a/src/app/left-side/left-side.component.scss
+++ b/src/app/left-side/left-side.component.scss
@@ -200,6 +200,8 @@
     width: 1rem;
     height: 1rem;
     color: #292b35;
+    opacity: 0.7;
+    font-size: 0.7rem;
 }
 
 .task-name {
@@ -221,9 +223,11 @@
 
 .left-column  #plus-icon {
     height: 37px;
-    position: relative;
+    position: sticky;
     display: flex;
     padding-left: 17px;
+    bottom: 0;
+    background-color: white;
 }
 
 .left-column #plus-icon #plus-symbol{
