--- a/src/app/right-side/right-side.component.scss
+++ b/src/app/right-side/right-side.component.scss
@@ -1,22 +1,21 @@
-
-
 .right-column {
     background-color: #f5f5f5;
     display: none;
-    width: 20.3rem;
+    width: 22.3rem;
     overflow: auto;
     overflow-x: hidden;
 }
 
 .right-column .sub-task-info {
     height: 92.5%;
-    padding: 0 0.5rem 0 0.7rem;
+    margin: 0 0.5rem 0 0.7rem;
     margin-top: 0.8rem;
+    background-color: white;
 }
 
 .right-column .sub-task-info #sub-task {
     display: flex;
-    height: 9%;
+    min-height: 9%;
     border: 1px solid #eaeaea;
     align-items: center;
     border-bottom: none;
@@ -28,7 +27,6 @@
     color: #3e69e4;
     width: 1.3rem;
     height: 1.1rem;
-    position: relative;
     margin-left: 0.8rem;
     background-size: contain;
     background-repeat: no-repeat;
@@ -40,7 +38,6 @@
     color: #3e69e4;
     width: 1.3rem;
     height: 1.1rem;
-    position: relative;
     margin-left: 0.8rem;
     background-size:contain;
     background-repeat:no-repeat;
@@ -55,22 +52,25 @@
     position: relative;
     width: 1rem;
     height: 1rem;
-    left: -0.2rem;
-    top: -0.2rem;
-    opacity:0.7;
+    opacity: 0.7;
+    left: 2rem;
     background-size: contain;
     background-repeat: no-repeat;
-    background-image: url("/assets/images/star.svg");
+    background-image: url(/assets/images/star.svg);
 }
 
 .right-column .sub-task-info #sub-task #sub-task-name {
     width: 69%;
-    height: 60%;
-    margin: 0 0.5rem 0 0.7rem;
+    min-height: 2rem;
     align-items: center;
     display: flex;
     outline-color: black;
-    padding-left: 0.8rem;
+    margin-bottom: 0.6rem;
+    word-break: break-word;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    color: #0c0d0e;
 }
 
 .right-column .sub-task-info #add-steps {
@@ -214,7 +214,7 @@
 }
 
 .right-column .taskCloseInfo #close-button {
-    width: 4.5rem;
+    width: 2.5rem;
     position: relative;
     height: 1.3rem;
     top: 0.5rem;
@@ -231,11 +231,11 @@
 }
 
 .right-column .taskCloseInfo #delete-sub-task {
-    width: 30rem;
+    width: 2rem;
     position: relative;
     height: 1rem;
     top: 0.7rem;
-    left: 7rem;
+    left: 1rem;
     cursor: pointer;
     background-size: contain;
     background-repeat: no-repeat;
@@ -291,7 +291,7 @@
 
 .delete-button {
     position: relative;
-    left: 0.15rem;
+    left: 1.7rem;
     opacity: 0.7;
     width: 1rem;
 }
